@@ -1,3 +1,9 @@
+Wed Jan 14 16:07:11 2015  NAKAMURA Usaku  <usa@ruby-lang.org>
+
+	* signal.c (ruby_signal): since SIGKILL is not supported by MSVCRT,
+	  should be treated before calling signal(3).
+	  [Bug #10615]
+
 Wed Jan 14 15:57:26 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* thread.c (exec_recursive): use the same last method name as
